--- a/css/proposal.css
+++ b/css/proposal.css
@@ -1,6 +1,6 @@
 h1, h2 {
     text-align: left;
-    font-family:'Playfair Display', 'TAN Mon Cheri';
+    font-family:'Playfair Display', 'Poppins', sans-serif;
 }
 
 h2 {
