--- a/css/proposal.css
+++ b/css/proposal.css
@@ -13,11 +13,11 @@ h1 {
 
 body {
     background-color: #E7E1D9;
-    font-family: 'Aleo', 'Poppins', serif;
+    font-family: 'Aleo', 'Poppins', sans-serif;
 }
 
 p {
-    font-family:'Aleo Light', 'Poppins', sans-serif;
+    font-family:'Aleo', 'Poppins', sans-serif;
     font-size: 20px;
 }
 
