--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,23 @@ ul {
     font-size: 20px;
 }
 
+.buttons {
+    display: flex;
+    /* text-align: center; */
+    justify-content: space-evenly;
+}
+
+/* .buttons:hover div:nth-child(1) {
+    text-decoration: underline;
+} */
+
 footer {
     display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0
+}
+
+footer p {
+    font-size: 12px;
 }
