--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,19 @@ footer {
 footer p {
     font-size: 12px;
 }
+
+img.profile-picture {
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 50%;
+}
+
+.flex-container {
+    display: block;
+}
+
+nav a {
+    color: black;
+    font-size: 2.5rem;
+    margin-right: .5em;
+}
