--- a/css/style2.css
+++ b/css/style2.css
@@ -4,14 +4,12 @@
 
   /*Color*/
   --first-color: #38232A;
-  --first-color-alt: #574248;
+  --first-color-alt: hsl(42, 55%, 86%);
   --second-color: #A86846;
   --second-color-alt: #C7A27A;
-  --title-color: #EFE3C8;
+  --title-color: #F8F2EB;
   --text-color: #EFE3C8;
   --body-color: #38232A;
-
-
 
   /*Font and typography*/
   --body-font: "Poppins", sans-serif;
@@ -78,6 +76,10 @@ img {
   overflow: hidden; /* For animation */
 }
 
+.home__title {
+    font-family: "Rosarivo", sans-serif;
+}
+
 /* HEADER & NAV */
 .header {
     position: fixed;
@@ -116,8 +118,8 @@ img {
 }
 
 .nav__toggle, 
-,.nav__close {
-    background-color: var(--text-color);
+.nav__close {
+    background-color: var(--first-color-alt);
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
@@ -134,7 +136,7 @@ img {
         background-color: var(--body-color);
         width: 80%;
         height: 100%;
-        box-shadow: 0 0 16px hsla(0, 0%, 100% .2);
+        box-shadow: 0 0 16px hsla(32, 48%, 95% .2);
         padding: 6rem 3rem;
         display: flex;
         flex-direction: column;
@@ -181,6 +183,78 @@ img {
 }
 
 /* HOME */
+.home__container {
+    position: relative;
+    padding-top: 7rem;
+    display: grid;
+    row-gap: 3rem;
+}
+
+.home__content {
+    text-align: center;
+}
+
+.home__subtitle {
+    font-size: var(--small-font-size);
+    margin-bottom: .5rem;
+    letter-spacing: 1px;
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 2; 
+}
+
+.home__title {
+    position: relative;
+    max-width: max-content;
+    margin: 0 auto .75rem;
+    font-size: var(--biggest-font-size);
+    color: var(--title-color);
+    background-image: url('../img/beansbg.png'); /* Set the image as a background */
+    background-size: cover;
+    background-attachment: fixed; /* Optional: Makes the background image fixed while scrolling */
+    background-repeat: no-repeat;
+}
+
+/* .home__title img {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+} */
+
+.home__title span{
+    position: relative;
+    z-index: 2;
+}
+
+.home__description{
+    line-height: 150%;
+    margin-bottom: 1.25rem;
+    position: absolute;
+    top: 60%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.home__button {
+    display: inline-block;
+    background: linear-gradient(180deg,
+                var(--text-color),
+                var(--second-color-alt));
+    padding: 1.125rem 3rem;
+    border-radius: 4rem;
+    color: var(--body-color);
+    font-weight: var(--font-semi-bold);
+    box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
+                inset 0 4px 8px hsla(32, 46% 95% .4);
+    position: absolute;
+    top: 70%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 2; 
+}
 
 
 /* BREAKPOINTS */
