--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,16 @@
     box-sizing: border-box;
 }
 
-h1, h2 {
+h1 {
     text-align: left;
-    font-family:'Poppins', sans-serif;
+    color: #38232A;
+    font-size: 80px;
+    font-family:'Rosarivo', sans-serif;
 }
 
 h2 {
+    text-align: left;
+    font-family: 'Poppins', sans-serif;
     font-size: 32px;
 }
 
