--- a/css/style.css
+++ b/css/style.css
@@ -34,25 +34,24 @@ section {
     background-color: #86C1CF;
 }
 
-.quiz-header {
-    display: inline-flex;
+.quiz-nav {
+    position: absolute;
+    right: 0;
+}
+
+.quiz-nav a {
+    font-size: 15px;
 }
 
 .quiz-header h1 {
     font-family: 'Rosarivo', serif;
 }
 
-.quiz-nav a {
-    /* display: inline-flex;
-    justify-content: space-evenly; */
-    font-size: 15px;
-}
-
 .question, .options {
     text-align: center;
 }
 
-.question p {
+.question p:first-child {
     font-family: 'Rosarivo', serif;
 }
 
@@ -67,7 +66,7 @@ div {
     display: flex;
     background-color: #38232A;
     border-radius: 6px;
-    padding: .5rem 8rem;
+    padding: .5rem 4rem;
     color: white;
 }
 
