--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,13 @@
     box-sizing: border-box;
 }
 
-h1 {
+h1, h2 {
     text-align: left;
     color: #38232A;
-    font-size: 80px;
-    font-family:'Rosarivo', sans-serif;
+    font-family:'Poppins', sans-serif;
 }
 
 h2 {
-    text-align: left;
-    font-family: 'Poppins', sans-serif;
     font-size: 32px;
 }
 
@@ -113,3 +110,4 @@ nav a {
     font-size: 2.5rem;
     margin-right: .5em;
 }
+
