--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,40 @@ nav a {
     margin-right: .5em;
 }
 
+.navbar2 {
+    width: 100%;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 142px;
+    display: inline-flex;
+}
+
+.navbar2 .bar {
+    width: 275px;
+    height: 87px;
+    position: relative;
+}
+
+.navbar2 .bar .border {
+    width: 275px; 
+    height: 87px; 
+    left: 0px; 
+    top: 0px; 
+    position: absolute; 
+    background: #A86846; 
+    border-radius: 16px
+}
+
+.navbar2 .bar .border .class {
+    padding-bottom: .25rem;
+    padding-top: .5rem;
+    font-size: .75rem;
+    position: absolute; 
+    text-align: center; 
+    color: #EFE3C8; 
+    font-size: 22px; 
+    font-family: Poppins; 
+    font-weight: 500; 
+    word-wrap: break-word
+}
