--- a/css/style.css
+++ b/css/style.css
@@ -138,39 +138,40 @@ nav a {
 }
 
 .navbar2 {
-    width: 100%;
-    height: 100%;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 142px;
+    width: 90%;
+    justify-content: start;
+    align-items: center;
+    gap: 8rem;
     display: inline-flex;
 }
 
 .navbar2 .bar {
-    width: 275px;
-    height: 87px;
+    width: 50%;
+    height: 50%;
+    margin: 100px;
     position: relative;
 }
 
-.navbar2 .bar .border {
+div.border {
     width: 275px;
-    height: 87px;
-    left: 0px;
-    top: 0px;
+    height: 80px;
+    left: 20%;
+    top: 20%;
+    box-sizing: border-box;
     position: absolute;
     background: #A86846;
-    border-radius: 16px
+    border-radius: 16px;
 }
 
-.navbar2 .bar .border .class {
-    padding-bottom: .25rem;
-    padding-top: .5rem;
-    font-size: .75rem;
-    position: absolute;
+div.border h2 {
+    line-height: 1.2;
+    padding: 1.5rem;
+    position: static;
     text-align: center;
     color: #EFE3C8;
     font-size: 22px;
     font-family: Poppins;
     font-weight: 500;
-    word-wrap: break-word
+    word-wrap: break-word;
+    margin-bottom: 0;
 }
