--- a/css/style2.css
+++ b/css/style2.css
@@ -1,270 +1,372 @@
 /* Variables */
 :root {
-  --header-height: 3.5rem;
-
-  /*Color*/
-  --first-color: #38232A;
-  --first-color-alt: hsl(42, 55%, 86%);
-  --second-color: #A86846;
-  --second-color-alt: #C7A27A;
-  --title-color: #F8F2EB;
-  --text-color: #EFE3C8;
-  --body-color: #38232A;
-
-  /*Font and typography*/
-  --body-font: "Poppins", sans-serif;
-  --biggest-font-size: 2rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-
-  /* Font weight */
-  --font-medium: 500;
-  --font-semi-bold: 600;
-  --font-bold: 700;
-
-  /* z index */
-  --z-tooltip: 10;
-  --z-fixed: 100;
-}
-
-/* Responsive typography */
-@media screen and (min-width: 1152px) {
-  :root {
-    --biggest-font-size: 4rem;
-    --h3-font-size: 1.125rem;
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
+    --header-height: 3.5rem;
+  
+    /*Color*/
+    --first-color: #38232A;
+    --first-color-alt: hsl(42, 55%, 86%);
+    --second-color: #A86846;
+    --second-color-alt: #C7A27A;
+    --title-color: #F8F2EB;
+    --text-color: #EFE3C8;
+    --body-color: #38232A;
+  
+    /*Font and typography*/
+    --body-font: "Poppins", sans-serif;
+    --biggest-font-size: 2rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
+  
+    /* Font weight */
+    --font-medium: 500;
+    --font-semi-bold: 600;
+    --font-bold: 700;
+  
+    /* z index */
+    --z-tooltip: 10;
+    --z-fixed: 100;
   }
-}
-
-/* BASE */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-medium);
-  background-color: var(--body-color);
-  color: var(--text-color);
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-/* REUSABLE CSS CLASSES */
-.container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
-}
-
-.main {
-  overflow: hidden; /* For animation */
-}
-
-.home__title {
-    font-family: "Rosarivo", sans-serif;
-}
-
-/* HEADER & NAV */
-.header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: var(--first-color);
-    z-index: var(--z-fixed);
-}
-
-.nav {
-    position: relative;
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav__logo,
-.nav__toggle, 
-.nav__close{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav__logo {
-    color: var(--text-color);
-    column-gap: .5rem;
-    font-weight: var(--font-semi-bold);
-}
-
-.nav__logo i{
-    font-size: 1.25rem;
-    font-weight: initial;
-}
-
-.nav__toggle, 
-.nav__close {
-    background-color: var(--first-color-alt);
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    font-size: 1.25rem;
-    cursor: pointer;
-}
-
-/* Navigation for mobile devices */
-@media screen and (max-width: 1023px) {
-    .nav__menu {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        background-color: var(--body-color);
-        width: 80%;
-        height: 100%;
-        box-shadow: 0 0 16px hsla(32, 48%, 95% .2);
-        padding: 6rem 3rem;
-        display: flex;
-        flex-direction: column;
-        row-gap: 2.5rem;
-        transition: right .4s;
+  
+  /* Responsive typography */
+  @media screen and (min-width: 1152px) {
+    :root {
+      --biggest-font-size: 4rem;
+      --h3-font-size: 1.125rem;
+      --normal-font-size: 1rem;
+      --small-font-size: .875rem;
     }
-}
-
-.nav__list{
-    display: flex;
-    flex-direction: column;
-    row-gap: 2.5rem;
-}
-
-.nav__link {
-    color: var(--text-color);
-    font-weight: var(--font-semi-bold);
-    transition: color .4s;
-}
-
-.nav__link:hover {
-    color: #F8F2EB;
-}
-
-.nav__button {
-    display: inline-block;
-    width: max-content;
+  }
+  
+  /* BASE */
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
     background-color: var(--body-color);
-    border: 2px solid var(--text-color);
-    padding: 1rem 3rem;
-    border-radius: 4rem;
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
-}
-.nav__close {
-    position: absolute;
-    top: .75rem;
-    right: 1.5rem;
-}
+    color: var(--text-color);
+  }
+  
+  ul {
+    list-style: none;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  /* REUSABLE CSS CLASSES */
+  .container {
+    max-width: 1120px;
+    margin-inline: 1.5rem;
+  }
+  
+  .main {
+    overflow: hidden; /* For animation */
+  }
+  
+  .section {
+    padding: 50;
+  }
 
-/* Show menu */
-.show-menu {
-    right: 0;
-}
+  .home__title {
+      font-family: "Rosarivo", sans-serif;
+  }
+  
+  /* HEADER & NAV */
+  .header {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      background-color: var(--first-color);
+      z-index: var(--z-fixed);
+  }
+  
+  .nav {
+      position: relative;
+      height: var(--header-height);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  
+  .nav__logo,
+  .nav__toggle, 
+  .nav__close{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  .nav__logo {
+      color: var(--text-color);
+      column-gap: .5rem;
+      font-weight: var(--font-semi-bold);
+  }
+  
+  .nav__logo i{
+      font-size: 1.25rem;
+      font-weight: initial;
+  }
+  
+  .nav__toggle, 
+  .nav__close {
+      background-color: var(--first-color-alt);
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      font-size: 1.25rem;
+      cursor: pointer;
+  }
+  
+  /* Navigation for mobile devices */
+  @media screen and (max-width: 1023px) {
+      .nav__menu {
+          position: fixed;
+          top: 0;
+          right: -100%;
+          background-color: var(--body-color);
+          width: 80%;
+          height: 100%;
+          box-shadow: 0 0 16px hsla(32, 48%, 95% .2);
+          padding: 6rem 3rem;
+          display: flex;
+          flex-direction: column;
+          row-gap: 2.5rem;
+          transition: right .4s;
+      }
+  }
+  
+  .nav__list{
+      display: flex;
+      flex-direction: column;
+      row-gap: 2.5rem;
+  }
+  
+  .nav__link {
+      color: var(--text-color);
+      font-weight: var(--font-semi-bold);
+      transition: color .4s;
+  }
+  
+  .nav__link:hover {
+      color: #F8F2EB;
+  }
+  
+  .nav__button {
+      display: inline-block;
+      width: max-content;
+      background-color: var(--body-color);
+      border: 2px solid var(--text-color);
+      padding: 1rem 3rem;
+      border-radius: 4rem;
+      color: var(--title-color);
+      font-weight: var(--font-semi-bold);
+  }
+  .nav__close {
+      position: absolute;
+      top: .75rem;
+      right: 1.5rem;
+  }
 
-/* HOME */
-.home__container {
-    position: relative;
-    padding-top: 7rem;
-    display: grid;
-    row-gap: 3rem;
-}
-
-.home__content {
-    text-align: center;
-}
-
-.home__subtitle {
-    font-size: var(--small-font-size);
-    margin-bottom: .5rem;
-    letter-spacing: 1px;
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    z-index: 2; 
-}
-
-.home__title {
-    position: relative;
-    max-width: max-content;
-    margin: 0 auto .75rem;
-    font-size: var(--biggest-font-size);
-    color: var(--title-color);
-    background-image: url('../img/beansbg.png'); /* Set the image as a background */
-    background-size: cover;
-    background-attachment: fixed; /* Optional: Makes the background image fixed while scrolling */
+  /* Show menu */
+  .show-menu {
+      right: 0;
+  }
+  
+  /* HOME */
+  .home {
+    width: 100%;
+    min-height: 100vh;
+    background: url(img/bgvector.png);
     background-repeat: no-repeat;
-}
-
-/* .home__title img {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-} */
-
-.home__title span{
-    position: relative;
-    z-index: 2;
-}
-
-.home__description{
-    line-height: 150%;
-    margin-bottom: 1.25rem;
-    position: absolute;
-    top: 60%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    z-index: 2;
-}
-
-.home__button {
-    display: inline-block;
-    background: linear-gradient(180deg,
-                var(--text-color),
-                var(--second-color-alt));
-    padding: 1.125rem 3rem;
-    border-radius: 4rem;
-    color: var(--body-color);
-    font-weight: var(--font-semi-bold);
-    box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
-                inset 0 4px 8px hsla(32, 46% 95% .4);
-    position: absolute;
-    top: 70%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    z-index: 2; 
-}
-
-
-/* BREAKPOINTS */
-/* For s devices */
-
-
-/* For t devices */
-
-
-/* For m devices */
-
-
-/* For lg devices */
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
+    align-items: center;
+    gap: 1.5rem;
+  }
+  /* .home__container {
+      position: relative;
+      padding-top: 7rem;
+      display: grid;
+      row-gap: 3rem;
+  }
+  
+  .home__content {
+      text-align: center;
+  }
+  
+  .home__subtitle {
+      font-size: var(--small-font-size);
+      margin-bottom: .5rem;
+      letter-spacing: 1px;
+      position: absolute;
+      top: 50%; 
+      left: 50%; 
+      transform: translate(-50%, -50%);
+      z-index: 2; 
+  }
+  
+  .home__title {
+      position: relative;
+      max-width: max-content;
+      margin: 0 auto .75rem;
+      font-size: var(--biggest-font-size);
+      color: var(--title-color);
+      background-image: url('../img/bgvector.png');
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+  }
+  
+  .home__title img {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+  } 
+  
+  .home__title span{
+      position: relative;
+      z-index: 2;
+  }
+  
+  .home__description{
+      line-height: 150%;
+      margin-bottom: 1.25rem;
+      position: absolute;
+      top: 60%; 
+      left: 50%; 
+      transform: translate(-50%, -50%);
+      z-index: 2;
+  } */
+  
+  .home__button {
+      display: inline-block;
+      background: linear-gradient(180deg,
+                  var(--text-color),
+                  var(--second-color-alt));
+      padding: 1.125rem 3rem;
+      border-radius: 4rem;
+      color: var(--body-color);
+      font-weight: var(--font-semi-bold);
+      box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
+                  inset 0 4px 8px hsla(32, 46% 95% .4);
+      position: absolute;
+      top: 70%; 
+      left: 50%; 
+      transform: translate(-50%, -50%);
+      z-index: 2; 
+  }
+  
+  
+  
+  /* BREAKPOINTS */
+  /* S devices */
+  @media screen and (max-width: 300px){
+      .container {
+          margin-inline: 1rem;
+      }
+      .home__title {
+          font-size: 1.75rem;
+      }
+  }
+  
+  /* TL devices */
+  @media screen and (min-width: 376px) and (min-height: 800px) {
+      .home__container {
+          padding-top: 10rem;
+      }
+  }
+  
+  /* M devices */
+  @media screen and (min-width: 576px) {
+      .home__container {
+          grid-template-columns: 400px;
+          justify-content: center;
+      }
+  
+      .nav__menu {
+          width: 60%;
+      }
+  }
+  
+  @media screen and (min-width: 767px) {
+      .home {
+          display: grid;
+          place-content: center;
+      }
+      .home__container {
+          grid-template-columns: repeat(2, 350px);
+          padding-top: 0;
+      }
+      .home__content {
+          text-align: initial;
+      }
+      .home__title {
+          margin-inline: 0;
+      }
+  }
+  
+  /* LG devices */
+  @media screen and (min-width: 1023px) {
+      .nav {
+          height: calc(car(--header-height) + 2rem);
+      }
+      .nav__toggle,
+      .nav__close {
+          display: none;
+      }.nav__menu {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          column-gap: 4.5rem;
+      }
+      .nav__list {
+          margin-left: auto;
+          flex-direction: row;
+          column-gap: 4.5rem;
+      }
+  
+      @media screen and  (min-width: 1152px) {
+          .container {
+              margin-inline: auto;
+          }
+          .home__container {
+              grid-template-columns: 460px 650px;
+              align-items: center;
+              z-index: 5;
+          }
+          .home__subtitle {
+              font-size: var(--normal-font-size);
+              margin-bottom: .75rem;
+          }
+          .home__title {
+              letter-spacing: -3px;
+              margin-bottom: 1rem;
+          }
+          .home__title img {
+              width: 250px;
+              right: -.75rem;
+          }
+          .home__description {
+              font-size: var(--h3-font-size);
+              margin-bottom: 3rem;
+          }
+  
+      }
+  }
+  
