--- a/css/style2.css
+++ b/css/style2.css
@@ -51,15 +51,38 @@
     background-color: var(--body-color);
     color: var(--text-color);
   }
-  
+
+  h1, h2 {
+    text-align: left;
+    color: #38232A;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
+p {
+    font-size: 20px;
+} */
+
+section {
+    margin: .5rem 0;
+    padding: .5rem;
+}
+
   ul {
     list-style: none;
   }
-  
+
   a {
     text-decoration: none;
   }
-  
+
   img {
     display: block;
     width: 100%;
@@ -131,6 +154,154 @@
       cursor: pointer;
   }
   
+  .quiz-page {
+    background-color: #86C1CF;
+}
+
+.displayed-nav {
+    display: none;
+}
+
+.dropdown-nav {
+    display: flex;
+    position: absolute;
+    right: 0;
+}
+
+.quiz-header h1 {
+    font-family: 'Rosarivo', serif;
+}
+
+.question, .options {
+    text-align: center;
+}
+
+.question p:first-child {
+    font-family: 'Rosarivo', serif;
+}
+
+/* Reference: https://stackoverflow.com/questions/43259704/css-how-to-center-align-a-list-element-with-left-aligned-text#:~:text=I%20would%20suggest%20adding%20text,from%20the%20parent%2C%20as%20desired. */
+div {
+    display: inline-block;
+    text-align: left;
+    /* padding: 0.5em 0; */
+}
+
+.options p {
+    display: flex;
+    background-color: #38232A;
+    border-radius: 6px;
+    padding: .5rem 4rem;
+    color: white;
+}
+
+.options p:hover {
+    background-color: #EFE3C8;
+    color: black;
+}
+
+.buttons {
+    display: flex;
+    /* text-align: center; */
+    justify-content: space-evenly;
+}
+
+.next:hover, .previous:hover {
+    color: white;
+}
+
+footer p {
+    /* display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0; */
+    font-size: 12px;
+}
+
+@media (min-width: 576px) {
+    .displayed-nav {
+        display: flex;
+        position: absolute;
+        right: 0;
+    }
+
+    .dropdown-nav {
+        display: none;
+    }
+    
+    .quiz-nav a {
+        font-size: 15px;
+        text-decoration: none;
+    }
+
+    .quiz-nav .quiz-link {
+        text-decoration: underline;
+        font-weight: bold;
+    }
+
+    .question p:last-child {
+        font-size: 26px;
+    }
+}
+
+img.profile-picture {
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 50%;
+}
+
+.flex-container {
+    display: block;
+}
+
+nav a {
+    color: black;
+    margin-right: .5em;
+}
+
+.navbar2 {
+    width: 90%;
+    justify-content: start;
+    align-items: center;
+    gap: 8rem;
+    display: inline-flex;
+}
+
+.navbar2 .bar {
+    width: 50%;
+    height: 50%;
+    margin: 100px;
+    position: relative;
+}
+
+div.border {
+    width: 275px;
+    height: 80px;
+    left: 20%;
+    top: 20%;
+    box-sizing: border-box;
+    position: absolute;
+    background: #A86846;
+    border-radius: 16px;
+}
+
+div.border h2 {
+    line-height: 1.2;
+    padding: 1.5rem;
+    position: static;
+    text-align: center;
+    color: #EFE3C8;
+    font-size: 22px;
+    font-family: Poppins;
+    font-weight: 500;
+    word-wrap: break-word;
+    margin-bottom: 0;
+}
+
+#select {
+    background: #38232A;
+}
+
   /* Navigation for mobile devices */
   @media screen and (max-width: 1023px) {
       .nav__menu {
@@ -216,71 +387,8 @@
     font-weight: var(--font-semi-bold);
     box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
                 inset 0 4px 8px hsla(32, 46% 95% .4);
-    /* position: absolute;
-    top: 70%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    z-index: 2;  */
 }
-  /* .home__container {
-      position: relative;
-      padding-top: 7rem;
-      display: grid;
-      row-gap: 3rem;
-  }
-  
-  .home__content {
-      text-align: center;
-  }
-  
-  .home__subtitle {
-      font-size: var(--small-font-size);
-      margin-bottom: .5rem;
-      letter-spacing: 1px;
-      position: absolute;
-      top: 50%; 
-      left: 50%; 
-      transform: translate(-50%, -50%);
-      z-index: 2; 
-  }
-  
-  .home__title {
-      position: relative;
-      max-width: max-content;
-      margin: 0 auto .75rem;
-      font-size: var(--biggest-font-size);
-      color: var(--title-color);
-      background-image: url('../img/bgvector.png');
-      background-size: cover;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-  }
-  
-  .home__title img {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-  } 
-  
-  .home__title span{
-      position: relative;
-      z-index: 2;
-  }
-  
-  .home__description{
-      line-height: 150%;
-      margin-bottom: 1.25rem;
-      position: absolute;
-      top: 60%; 
-      left: 50%; 
-      transform: translate(-50%, -50%);
-      z-index: 2;
-  } */
-  
 
-  
-  
-  
   /* BREAKPOINTS */
   /* S devices */
   @media screen and (max-width: 300px){
@@ -376,4 +484,3 @@
   
       }
   }
-  
