--- a/css/style2.css
+++ b/css/style2.css
@@ -289,7 +289,7 @@ div.border h2 {
     padding: 1.5rem;
     position: static;
     text-align: center;
-    color: #EFE3C8;
+    color: var(--creamy-latte);
     font-size: 22px;
     font-family: Poppins;
     font-weight: 500;
@@ -298,7 +298,7 @@ div.border h2 {
 }
 
 #select {
-    background: #38232A;
+    background: var(--espresso-brown);
 }
 
   /* Navigation for mobile devices */
