--- a/css/style2.css
+++ b/css/style2.css
@@ -153,7 +153,7 @@ section {
       cursor: pointer;
   }
   
-  .quiz-page {
+.quiz-page {
     background-color: var(--mint);
 }
 
@@ -167,8 +167,10 @@ section {
     right: 0;
 }
 
-.quiz-header h1 {
+.quiz-header {
     font-family: var(--title-font);
+    color: var(--espresso-brown);
+    margin-top: 60px;
 }
 
 .question, .options {
@@ -176,7 +178,9 @@ section {
 }
 
 .question {
-    color: white;
+    color: var(--espresso-brown);
+    /* margin-top: 30px; */
+    margin-bottom: 10px;
 }
 
 .question p:first-child {
@@ -195,6 +199,7 @@ div {
     background-color: var(--espresso-brown);
     border-radius: 6px;
     padding: .5rem 4rem;
+    margin: 1rem;
     color: white;
 }
 
@@ -207,6 +212,7 @@ div {
     display: flex;
     /* text-align: center; */
     justify-content: space-evenly;
+    color: var(--espresso-brown)
 }
 
 .next:hover, .previous:hover {
@@ -214,12 +220,12 @@ div {
 }
 
 footer p {
-    /* display: block;
+    display: block;
     position: absolute;
     bottom: 0;
-    left: 0; */
+    left: 0;
     font-size: 12px;
-    color: white;
+    color: var(--espresso-brown);
 }
 
 @media (min-width: 576px) {
