--- a/css/style2.css
+++ b/css/style2.css
@@ -185,10 +185,14 @@ img {
     z-index: var(--z-fixed);
 }
 
-.heading {
+.heading h1 {
     text-align: center;
+    font-family: var(--title-font);
+    color: var(--creamy-latte);
 }
-
+.orders {
+    background-color: var(--cappuccino);
+} 
 .nav {
     position: relative;
     height: var(--header-height);
