--- a/css/style2.css
+++ b/css/style2.css
@@ -305,6 +305,12 @@ footer p {
     color: var(--espresso-brown);
 }
 
+.custom-orders {
+    font-family: var(--title-font);
+    color: var(--caramel);
+    margin-top: 60px;
+}
+
 .custom-drinks {
     display: flex;
     flex-wrap: wrap;
