update footer for all pages

--- a/css/style2.css
+++ b/css/style2.css
@@ -302,7 +302,7 @@ footer p {
     bottom: 0;
     left: 0;
     font-size: 12px;
-    color: var(--espresso-brown);
+    color: #EFE3C8;
 }
 
 .custom-drinks {
