--- a/css/style2.css
+++ b/css/style2.css
@@ -134,12 +134,14 @@ img {
 /* Buttons */
 .primary-button {
     border-radius: 48px;
+    padding: .5rem 1rem;
     background-color: var(--espresso-brown);
     color: var(--milk-foam);
 }
 
 .secondary-button {
     border-radius: 48px;
+    padding: .5rem 1rem;
     background-color: var(--cappuccino);
     color: var(--milk-foam);
 }
@@ -147,24 +149,28 @@ img {
 .tertiary-button {
     border-radius: 48px;
     border: 4px solid;
+    padding: .5rem 1rem;
     border-color: var(--espresso-brown);
     color: var(--milk-foam);
 }
 
 .primary-button:hover {
     border-radius: 48px;
+    padding: .5rem 1rem;
     background-color: var(--espresso-brown);
     color: var(--milk-foam);
 }
 
 .secondary-button:hover {
     border-radius: 48px;
+    padding: .5rem 1rem;
     background-color: var(--cappuccino);
     color: var(--milk-foam);
 }
 
 .tertiary-button:hover {
     border-radius: 48px;
+    padding: .5rem 1rem;
     background-color: var(--espresso-brown);
     color: var(--milk-foam);
 }
