--- a/css/style2.css
+++ b/css/style2.css
@@ -606,6 +606,18 @@ nav a {
     display: inline-block;
     width: 100%;
 }
+/* #section3 {
+    height: 700px;
+    background: var(--cappuccino);
+    display: inline-block;
+    width: 100%;
+} */
+/* #section4 {
+    height: 700px;
+    background: var(--cappuccino);
+    display: inline-block;
+    width: 100%;
+} */
 
 /* BREAKPOINTS */
 /* S devices */
